<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/heading"
        android:padding="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="A.I/Natural Service"
            android:gravity="left|center_vertical"
            android:textColor="@color/white"
            />

        <ImageView
            android:id="@+id/animalStatusIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/animal_status_icon"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/heading"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="MILK UNION NAME"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#14212a"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/villageCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="BMS Code"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:padding="5dp"/>
        
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/white"/>

        <TextView
            android:id="@+id/ownerCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Owner's Code"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:padding="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:src="@drawable/profile_icon" />


        <TextView
            android:id="@+id/ownersName"
            android:layout_width="0dp"
            android:paddingLeft="10dp"
            android:gravity="left|center_vertical"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_medium"
            android:background="@android:color/transparent"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_medium"
            android:background="@android:color/transparent"
            android:entries="@array/temp_array"
            android:prompt="@string/enterOwner"
            android:paddingLeft="10dp"
            android:gravity="left|center_vertical"/>


        <ImageView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:src="@drawable/drop_down" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/datePickLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/datePick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/select_date_of_heat"
            android:paddingLeft="10dp"
            android:textSize="@dimen/text_size_medium"
            android:gravity="left|center_vertical"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calander" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/servicePickLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/serviceType"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/select_service_type"
            android:paddingLeft="10dp"
            android:textSize="@dimen/text_size_medium"
            android:gravity="left|center_vertical"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drop_down" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/sireEarTagNoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sireEarTagNo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:textSize="@dimen/text_size_medium"
            android:gravity="left|center_vertical"
            android:background="@android:color/transparent"
            android:text="@string/select_sire_ear_tag_no" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drop_down" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/inseminatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/inseminator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/select_inseminator"
            android:paddingLeft="10dp"
            android:textSize="@dimen/text_size_medium"
            android:gravity="left|center_vertical"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drop_down" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/totalDose"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:paddingLeft="10dp"
            android:gravity="left|center_vertical"
            android:hint="ENTER TOTAL DOSE"
            android:textSize="@dimen/text_size_medium"
            android:inputType="number"
            />


        <ImageView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:src="@drawable/drop_down" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/naturalServiceSubmit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="01dp"
            android:layout_weight="1"
            android:background="@drawable/submit_button_selector"
            android:gravity="center"
            android:text="SUBMIT"
            android:textColor="@drawable/submit_button_text_selector"
            android:textSize="16sp" />


        <Button
            android:id="@+id/naturalServiceCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="01dp"
            android:layout_weight="1"
            android:background="@drawable/cancel_button_selector"
            android:gravity="center"
            android:text="CANCEL"
            android:textColor="@drawable/cancel_button_text_selector"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
